// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextInputWithButton /> by default matches with snapshot 1`] = `
<div
  className="sc-hKwDye byTLa-d k-Form-TextInputWithButton k-Form-TextInputWithButton--medium"
>
  <input
    className="sc-bdvvtL ekFnRP k-Form-TextInput k-Form-TextInputWithButton__input k-Form-TextInput--medium"
    disabled={false}
    name="text"
  />
  <button
    className="sc-dkPtRN gTzzVK k-Button k-Form-TextInputWithButton__button k-Button--medium k-Button--beryllium k-Button--fit-content"
    disabled={false}
    style={
      Object {
        "--Button-border-radius": null,
        "--Button-bullet-color": null,
      }
    }
    type="button"
  >
    Button
  </button>
</div>
`;

exports[`<TextInputWithButton /> with buttonProps prop matches with snapshot 1`] = `
<div
  className="sc-hKwDye byTLa-d k-Form-TextInputWithButton k-Form-TextInputWithButton--medium"
>
  <input
    className="sc-bdvvtL ekFnRP k-Form-TextInput k-Form-TextInputWithButton__input k-Form-TextInput--medium"
    disabled={false}
    name="text"
  />
  <button
    className="sc-dkPtRN gTzzVK k-Button k-Form-TextInputWithButton__button k-Button--medium k-Button--beryllium k-Button--fit-content"
    onClick={[Function]}
    style={
      Object {
        "--Button-border-radius": null,
        "--Button-bullet-color": null,
      }
    }
    type="button"
  >
    Button
  </button>
</div>
`;

exports[`<TextInputWithButton /> with component inside button value matches with snapshot 1`] = `
<div
  className="sc-hKwDye byTLa-d k-Form-TextInputWithButton k-Form-TextInputWithButton--medium"
>
  <input
    className="sc-bdvvtL ekFnRP k-Form-TextInput k-Form-TextInputWithButton__input k-Form-TextInput--medium"
    disabled={false}
    name="text"
    placeholder="Les props sont transmises"
  />
  <button
    className="sc-dkPtRN gTzzVK k-Button k-Form-TextInputWithButton__button k-Button--medium k-Button--beryllium k-Button--fit-content"
    disabled={false}
    style={
      Object {
        "--Button-border-radius": null,
        "--Button-bullet-color": null,
      }
    }
    type="button"
  >
    <div
      className="sc-eCImPb gxyOqw k-Loader"
    >
      <svg
        className="k-Loader__circle"
        fill="var(--color-grey-900, #222)"
        viewBox="0 0 5 5"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx={2.5}
          cy={2.5}
          r={5}
        />
      </svg>
      <svg
        className="k-Loader__circle"
        fill="var(--color-grey-900, #222)"
        viewBox="0 0 5 5"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx={2.5}
          cy={2.5}
          r={5}
        />
      </svg>
      <svg
        className="k-Loader__circle"
        fill="var(--color-grey-900, #222)"
        viewBox="0 0 5 5"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx={2.5}
          cy={2.5}
          r={5}
        />
      </svg>
    </div>
  </button>
</div>
`;

exports[`<TextInputWithButton /> with disabled prop matches with snapshot 1`] = `
<div
  className="sc-hKwDye byTLa-d k-Form-TextInputWithButton k-Form-TextInputWithButton--medium"
>
  <input
    className="sc-bdvvtL ekFnRP k-Form-TextInput k-Form-TextInputWithButton__input k-Form-TextInput--medium k-Form-TextInput--disabled"
    disabled={true}
    name="text"
  />
  <button
    className="sc-dkPtRN gTzzVK k-Button k-Form-TextInputWithButton__button k-Form-TextInputWithButton__button--disabled k-Button--medium k-Button--beryllium k-Button--fit-content k-Button--disabled"
    disabled={true}
    style={
      Object {
        "--Button-border-radius": null,
        "--Button-bullet-color": null,
      }
    }
    type="button"
  >
    Button
  </button>
</div>
`;

exports[`<TextInputWithButton /> with error prop matches with snapshot 1`] = `
<div
  className="sc-hKwDye byTLa-d k-Form-TextInputWithButton k-Form-TextInputWithButton--medium"
>
  <input
    className="sc-bdvvtL ekFnRP k-Form-TextInput k-Form-TextInputWithButton__input k-Form-TextInput--medium k-Form-TextInput--error"
    disabled={false}
    name="text"
  />
  <button
    className="sc-dkPtRN gTzzVK k-Button k-Form-TextInputWithButton__button k-Form-TextInputWithButton__button--error k-Button--medium k-Button--beryllium k-Button--fit-content"
    disabled={false}
    style={
      Object {
        "--Button-border-radius": null,
        "--Button-bullet-color": null,
      }
    }
    type="button"
  >
    Button
  </button>
</div>
`;

exports[`<TextInputWithButton /> with props matches with snapshot 1`] = `
<div
  className="sc-hKwDye byTLa-d k-Form-TextInputWithButton k-Form-TextInputWithButton--medium"
>
  <input
    className="sc-bdvvtL ekFnRP k-Form-TextInput k-Form-TextInputWithButton__input k-Form-TextInput--medium"
    disabled={false}
    name="text"
    placeholder="Les props sont transmises"
    value="foobar"
  />
  <button
    className="sc-dkPtRN gTzzVK k-Button k-Form-TextInputWithButton__button k-Button--medium k-Button--beryllium k-Button--fit-content"
    disabled={false}
    style={
      Object {
        "--Button-border-radius": null,
        "--Button-bullet-color": null,
      }
    }
    type="button"
  >
    Button
  </button>
</div>
`;

exports[`<TextInputWithButton /> with size prop matches with snapshot 1`] = `
<div
  className="sc-hKwDye byTLa-d k-Form-TextInputWithButton k-Form-TextInputWithButton--small"
>
  <input
    className="sc-bdvvtL ekFnRP k-Form-TextInput k-Form-TextInputWithButton__input k-Form-TextInput--small"
    disabled={false}
    name="text"
  />
  <button
    className="sc-dkPtRN gTzzVK k-Button k-Form-TextInputWithButton__button k-Button--small k-Button--beryllium k-Button--fit-content"
    disabled={false}
    style={
      Object {
        "--Button-border-radius": null,
        "--Button-bullet-color": null,
      }
    }
    type="button"
  >
    Button
  </button>
</div>
`;

exports[`<TextInputWithButton /> with valid prop matches with snapshot 1`] = `
<div
  className="sc-hKwDye byTLa-d k-Form-TextInputWithButton k-Form-TextInputWithButton--medium"
>
  <input
    className="sc-bdvvtL ekFnRP k-Form-TextInput k-Form-TextInputWithButton__input k-Form-TextInput--medium k-Form-TextInput--valid"
    disabled={false}
    name="text"
  />
  <button
    className="sc-dkPtRN gTzzVK k-Button k-Form-TextInputWithButton__button k-Form-TextInputWithButton__button--valid k-Button--medium k-Button--beryllium k-Button--fit-content"
    disabled={false}
    style={
      Object {
        "--Button-border-radius": null,
        "--Button-bullet-color": null,
      }
    }
    type="button"
  >
    Button
  </button>
</div>
`;
